[workspace]
members = [
    ".", # The main crate
    "adamastor-macros",
]
[package]
name = "adamastor"
version = "0.2.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
adamastor-macros = { path = "adamastor-macros" }
uuid = { version = "1.18.1", features = ["v4"] }
thiserror = "2.0.16"
futures = "0.3.31"

[lib]
name = "adamastor"
path = "src/lib.rs"

