[package]
name = "adamastor"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Type-safe Rust framework for building LLM agents with structured outputs"
repository = "https://github.com/antonio-leitao/adamastor"
keywords = ["llm", "gemini", "ai", "agent", "type-safe"]
categories = ["api-bindings", "web-programming"]
authors = ["António Leitão <leitaoto@gmail.com>"]

[dependencies]
# Schema generation - the magic that eliminates the need for proc macros
schemars = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async HTTP client (pinned for Rust 1.75 compatibility)
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"

# UUID for multipart form boundaries (pinned for Rust 1.75 compatibility)
uuid = { version = "1.4", features = ["v4"] }

# Pin transitive dependencies for Rust 1.75 compatibility
url = "2.4.1"
indexmap = "2.2.6"

[dev-dependencies]
tokio-test = "0.4"
