[package]
name = "adamastor-macros"
version = { workspace = true }
edition = "2021"
license = "MIT"
description = "Procedural macros for the Adamastor LLM framework"
repository = "https://github.com/antonio-leitao/adamastor"
authors = ["Your Name <leitaoto@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0.145"
